[package]
name = "win_test01"
version = "0.1.0"
edition = "2024"

[dependencies]
pixels = "0.17.1"
ril = { version = "0.10.3", features = ["all"] }
softbuffer = "0.4.8"
winit = "0.30.13"

[profile.release]
opt-level = "z"      # Оптимизировать бинарник строго по размеру (а не по скорости)
lto = true           # Включить Link-Time Optimization (удаляет неиспользуемый код из всех библиотек)
codegen-units = 1    # Уменьшает параллельную сборку ради более глубокой оптимизации
panic = "abort"      # Отключает раскрутку стека при панике (удаляет тяжелую подсистему логирования паник)
strip = true         # Полностью вырезает из .exe файла все отладочные символы и имена функций
