[package]
name = "bench_test"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
bytemuck = "1.25.0"
embedded-graphics = "0.8.2"
pixels = "0.17.1"
rand = "0.10.2"
rayon = "1.12.0"
ril = { version = "0.10.3", features = ["all"] }
softbuffer = "0.4.8"
winit = "0.30.13"

[profile.release]
opt-level = "z"      # Оптимизировать бинарник строго по размеру (а не по скорости)
lto = true           # Включить Link-Time Optimization (удаляет неиспользуемый код из всех библиотек)
codegen-units = 1    # Уменьшает параллельную сборку ради более глубокой оптимизации
panic = "abort"      # Отключает раскрутку стека при панике (удаляет тяжелую подсистему логирования паник)
strip = true         # Полностью вырезает из .exe файла все отладочные символы и имена функций

[[bin]]
name = "font_gen"
path = "src/bin/font_gen.rs"
